Fixed bug, navbar will be purple when screen is navbar collapse and have hamburger.

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,5 +1,5 @@
 .navbar-fixed-top.scrolled {
-  background-color: #11ffee00;
+  background-color: #c6cfff;
 }
 
 .navbar-custom {
@@ -35,3 +35,10 @@
 .custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 } 
+
+@media (min-width: 768px) { 
+  .navbar-fixed-top.scrolled {
+    background-color: #11ffee00;
+  }
+}
+
